--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -44,6 +44,64 @@ summary {
   display: block;
 }
 
+
+/** {
+  box-sizing: border-box;
+}
+body {
+  font-size: 1.25rem;
+  font-family: sans-serif;
+  line-height: 150%;
+  text-shadow: 0 2px 2px #b6701e;
+}*/
+boozeman {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 20px;
+}
+bsection {
+  color: #fff;
+  text-align: center;
+}
+bdiv{
+  height: 100%;
+}
+
+cdiv {
+    float: right;
+/*    width: 120px;
+    height: 400px;*/
+    /*margin: 0 0 15px 20px;*/
+    padding: 5px;
+    border: 1px solid black;
+    text-align: center;
+}
+
+.container {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+div.rmodule {
+  float: right;
+  text-align: center;
+}
+/* Pattern styles */
+.left-half {
+  background-color: #ff9e2c;
+  position: absolute;
+  left: 0px;
+  width: 50%;
+}
+.right-half {
+  background-color: #b6701e;
+  position: absolute;
+  right: 0px;
+  width: 50%;
+}
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
@@ -447,8 +505,16 @@ a:hover {
 }
 
 h1.title {
-  margin: 30px 20px 10px;
-  font-size: 60px;
+  margin: 10px 20px 10px;
+  font-size: 50px;
+  font-weight: bold;
+  font-style: normal;
+  font-family:Georgia, serif;
+  text-align: center;
+}
+h1.subtitle {
+  margin: 0px 20px 10px;
+  font-size: 36px;
   font-weight: bold;
   font-style: italic;
   font-family:Georgia, serif;
@@ -462,7 +528,7 @@ h1.title {
 
 #container {
   border: 1px solid #2a2a2a;
-  background: #ddd url(../images/pattern.png);
+  background: #ddd url(../images/carbon2.png);
   box-shadow: 0 0 5px #b1b1b1;
 }
 
@@ -471,16 +537,23 @@ p.tagline {
   color: #fff;
   font-size: 17px;
 }
+h1.tagline {
+  padding: 20px 20px 0;
+  color: #fff;
+  font-size: 23px;
+}
 
 #main {
+  clear: both;
   margin-top: 20px;
   padding: 0 20px 90px;
   background-color: #fff;
 }
 
 .download-bar {
-  background: #222;
-  border: 5px solid #444;
+  clear: both;
+  background: #111;
+  border: 5px solid #222;
   padding: 10px;
   margin: 0 -35px 20px;
   position: relative;
@@ -550,8 +623,60 @@ p.tagline {
 }
 
 .download-bar a.code {
-  background: transparent url(../images/code.png) no-repeat 0 2px;
-  padding-left: 35px;
+  background: transparent url(../images/code.png) no-repeat 10px 2px;
+  padding-left: 48px;
+  margin-top: 8px;
+  display: block;
+  float: left;
+  text-indent: 0;
+  width: auto;
+  height: auto;
+  opacity: 1;
+  filter:alpha(opacity=100);  /* IE 5-7 */
+}
+
+.download-bar a.scholar {
+  background: transparent url(../images/scholar.png) no-repeat 10px -2px;
+  padding-left: 37px;
+  margin-top: 8px;
+  display: block;
+  float: left;
+  text-indent: 0;
+  width: auto;
+  height: auto;
+  opacity: 1;
+  filter:alpha(opacity=100);  /* IE 5-7 */
+}
+
+.download-bar a.linkedin {
+  background: transparent url(../images/linkedin.png) no-repeat 10px -2px;
+  padding-left: 40px;
+  margin-top: 8px;
+  display: block;
+  float: left;
+  text-indent: 0;
+  width: auto;
+  height: auto;
+  opacity: 1;
+  filter:alpha(opacity=100);  /* IE 5-7 */
+}
+
+.download-bar a.hcrl {
+  background: transparent url(../images/hcrl.png) no-repeat 10px -2px;
+  padding-left: 40px;
+  margin-top: 8px;
+  display: block;
+  float: left;
+  text-indent: 0;
+  width: auto;
+  height: auto;
+  opacity: 1;
+  filter:alpha(opacity=100);  /* IE 5-7 */
+}
+
+.download-bar a.sentis {
+  background: transparent url(../images/sentis.png) no-repeat 10px -2px;
+  padding-left: 40px;
   margin-top: 8px;
   display: block;
   float: left;
@@ -686,8 +811,8 @@ footer {
 }
 
 footer .owner {
-  background: #222;
-  border: 5px solid #444;
+  background: #111;
+  border: 5px solid #222;
   padding: 5px 15px;
   margin: -67px -10px 35px;
   color: #d6d6d6;
@@ -701,7 +826,7 @@ footer .creds small {
 }
 
 footer .owner .avatar {
-  background-color: #666;
+  background-color: #444;
   display: block;
   margin: -19px 10px 0 0;
   width: 60px;
@@ -710,7 +835,7 @@ footer .owner .avatar {
 
 footer .owner img {
   display: block;
-  border: 1px solid #2a2a2a;
+  border: 1px solid #222;
   margin: 5px;
 }
 
