--- a/stylesheets/magician.css
+++ b/stylesheets/magician.css
@@ -1,4 +1,4 @@
-! normalize.css v3.0.0 | MIT License | git.io/normalize */
+/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -44,6 +44,42 @@ summary {
   display: block;
 }
 
+
+/** {
+  box-sizing: border-box;
+}
+body {
+  font-size: 1.25rem;
+  font-family: sans-serif;
+  line-height: 150%;
+  text-shadow: 0 2px 2px #b6701e;
+}*/
+boozeman {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 20px;
+}
+bsection {
+  color: #fff;
+  text-align: center;
+}
+bdiv{
+  height: 100%;
+}
+
+cdiv {
+    float: right;
+/*    width: 120px;
+    height: 400px;*/
+    /*margin: 0 0 15px 20px;*/
+    padding: 5px;
+    border: 1px solid black;
+    text-align: center;
+}
+
 .container {
   display: table;
   width: 100%;
@@ -54,7 +90,18 @@ div.rmodule {
   text-align: center;
 }
 /* Pattern styles */
-
+.left-half {
+  background-color: #ff9e2c;
+  position: absolute;
+  left: 0px;
+  width: 50%;
+}
+.right-half {
+  background-color: #b6701e;
+  position: absolute;
+  right: 0px;
+  width: 50%;
+}
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
@@ -442,22 +489,18 @@ body {
   font-size: 17px;
   /*font-family: Arial, Arial, Helvetica, sans-serif;*/
   
-  /*font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;*/
-  /*font-family: 'Droid Serif', serif;*/
-  /*font-family: 'Roboto', sans-serif;*/
-  font-family: 'Overpass', sans-serif;
-  /*font-family: serif;*/
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   
-  line-height: 1.4;
+  line-height: 1.75;
   /*background: #D1D1D1;*/
 
-  /*background: url(../images/Space.jpg);*/
-  background: #000;
+  background: url(../images/Space.jpg);
+  /*background: #fff;*/
 }
 
 a {
-  /*color: #d0a2e5;*/
-  color: #63a52a; 
+  /*color: #63a52a; green style*/
+  color: #9c76a9;
   text-decoration: none;
   transition: opacity ease-in-out 0.3s;
   -webkit-transition: opacity ease-in-out 0.3s;  /* Safari <=6.1, Android <= 4.3 */
@@ -465,23 +508,27 @@ a {
 
 a:hover {
   text-decoration: underline;
-  /*color: #e4a7ff;*/
-  color: #90D355;
+  /*color: #90D355; green style*/
+  color: #cf75f0;
 }
 
 h1.title {
   margin: 0px 0px 0px;
   font-size: 50px;
-  color: #bbb;
-  font-family: 'Yantramanav', sans-serif;
+  color: #786d29;
+  color: #96bce7; /*eye color (gray)*/
+  /*color: #9c76a9;*/
+  font-weight: normal;
+  /*font-style: italic;*/
+  font-family:Georgia, serif;
   text-align: center;
 }
 h1.mtitle {
   margin: 10px 20px 10px;
   font-size: 25px;
-  color: #bbb;
-  font-family: 'Yantramanav', sans-serif;
-  /*font-family:Georgia, serif;*/
+  font-weight: bold;
+  font-style: normal;
+  font-family:Georgia, serif;
   text-align: center;
 }
 h1.subtitle {
@@ -489,7 +536,7 @@ h1.subtitle {
   font-size: 36px;
   font-weight: bold;
   font-style: italic;
-  /*font-family:Georgia, serif;*/
+  font-family:Georgia, serif;
   text-align: center;
 }
 
@@ -504,16 +551,17 @@ h1.subtitle {
 
 
 #container {
+  /*border: 1px solid #a1923a;*/
   background: #ddd url(../images/carbon2.png);
-  box-shadow: 0 0 33px #888;
+  /*box-shadow: 0 0 15px #786d29;*/
+  box-shadow: 0 0 45px #96bce7; /*eye color (gray)*/
 }
 
 p.tagline {
-  padding: 1em 1em 1em;
-  color: #bbb;
-  font-size: 20px;
-  line-height: 1.3;
-  text-align: left;
+  padding: 20px 20px 0;
+  color: #ccc;
+  font-size: 21px;
+  line-height: 1.6;
 }
 h1.tagline {
   padding: 25px 20px 0;
@@ -532,7 +580,6 @@ h1.tagline {
 .markdown-body a {
   color: #542465; 
   text-decoration: none;
-  font-weight: bold;
   transition: opacity ease-in-out 0.3s;
   -webkit-transition: opacity ease-in-out 0.3s;  /* Safari <=6.1, Android <= 4.3 */
 }
@@ -540,59 +587,28 @@ h1.tagline {
 .markdown-body a:hover {
   text-decoration: underline;
   color: #873aa1;
-  color: #893ba5;
 }
 
 img {
   border: 0px solid #222;
+  box-shadow: 1px 1px 2px #96bce7; /*eye color (gray)*/
 }
 
 .download-bar {
   clear: both;
   background: #111;
-  border: 3px solid #222;
-  box-shadow: 0 0 20px #786d29;
-  box-shadow: 0 0 2px #888;
-  z-index:10;
-  padding: 0px;
-  margin: 0 -33px 20px;
+  /*border: 2px solid #a1923a;*/
+  border: 1px solid #222;
+  /*border: 2px solid #a1923a;*/
+  /*box-shadow: 0 0 20px #786d29;*/
+  box-shadow: 0 0 5px #96bce7; /*eye color (gray)*/
+  padding: 2px;
+  margin: 0 -35px 20px;
   position: relative;
-}
-
-.download-bar .blc {
-  border: 9px solid black;
-  border-color: transparent transparent black;
-  width: 0;
-  height: 0;
-  display: block;
-  position: absolute;
-  bottom: -11px;
-  /*bottom: -40px;*/
-  z-index:-20;
-  left: 0;
-  transform: rotate(45deg);
-  -ms-transform: rotate(45deg); 
-  -webkit-transform: rotate(45deg); 
-}
-
-.download-bar .trc {
-  border: 9px solid black;
-  border-color:   transparent transparent black;
-  width: 0;
-  height: 0;
-  display: block;
-  position: absolute;
-  z-index:-20;
-  bottom: -11px;
-  right: 0;
-  transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);  /* IE9 */
-  -webkit-transform: rotate(-45deg); /* 2014 current */
 }
 
 .download-bar .inner {
   overflow: hidden;
-  text-align:center;
 }
 
 .download-bar .watch-fork iframe {
@@ -615,7 +631,33 @@ img {
   border-radius: 3px;
 }
 
+.download-bar .blc {
+  border: 10px solid black;
+  border-color: transparent transparent black;
+  width: 0;
+  height: 0;
+  display: block;
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  transform: rotate(45deg);
+  -ms-transform: rotate(45deg);  /* IE9 */
+  -webkit-transform: rotate(45deg); /* 2014 current */
+}
 
+.download-bar .trc {
+  border: 10px solid black;
+  border-color:  black transparent transparent;
+  width: 0;
+  height: 0;
+  display: block;
+  position: absolute;
+  top: -15px;
+  right: 0;
+  transform: rotate(45deg);
+  -ms-transform: rotate(45deg);  /* IE9 */
+  -webkit-transform: rotate(45deg); /* 2014 current */
+}
 
 .download-bar .avatar {
   border: 1px solid black;
@@ -669,21 +711,8 @@ img {
 
 .download-bar a.hcrl {
   background: transparent url(../images/hcrl.png) no-repeat 10px -2px;
-  padding-left: 37px;
-  margin-top: 8px;
-  display: block;
-  float: left;
-  text-indent: 0;
-  width: auto;
-  height: auto;
-  opacity: 1;
-  filter:alpha(opacity=100);  /* IE 5-7 */
-}
-
-.download-bar a.gray {
-  background: transparent url(../images/gray.png) no-repeat 10px -2px;
   padding-left: 40px;
-  margin-top: 10px;
+  margin-top: 8px;
   display: block;
   float: left;
   text-indent: 0;
@@ -825,16 +854,16 @@ a.download-button span {
 }
 
 footer {
-  margin-bottom: 30px;
+  margin-bottom: 60px;
   padding-bottom: 60px;
 }
 
 footer .owner {
   background: #111;
-/*  border: 5px solid #222;*/
+  border: 5px solid #222;
   padding: 5px 15px;
   margin: -67px -10px 35px;
-  color: #aaa;
+  color: #d6d6d6;
 }
 
 footer .creds small {
@@ -845,7 +874,7 @@ footer .creds small {
 }
 
 footer .owner .avatar {
-  background-color: #222;
+  background-color: #444;
   display: block;
   margin: -19px 10px 0 0;
   width: 60px;
@@ -887,10 +916,10 @@ footer .owner p a {
 .markdown-body h1,
 .markdown-body h2,
 .markdown-body h3,
-.markdown-body h4 {
-  /*font-weight: bold;*/
-  font-family: 'Yantramanav', sans-serif;
-  color: #333;
+.markdown-body h4,
+.markdown-body h5,
+.markdown-body h6 {
+  font-weight: bold;
 }
 
 .markdown-body h1 {
@@ -899,18 +928,17 @@ footer .owner p a {
 
 .markdown-body h2 {
   font-size: 24px;
-  /*color: #557398;*/
+  color: #557398;
 }
 
 .markdown-body h3 {
-  font-size: 22px;
-}
-
-.markdown-body h4 {
   font-size: 20px;
 }
 
-/*Don't use h5 or h6*/
+.markdown-body h4 {
+  font-size: 18px;
+}
+
 .markdown-body h5 {
   font-size: 16px;
 }
@@ -924,7 +952,7 @@ footer .owner p a {
   line-height: 20px;
   box-shadow: inset 0 0 5px #000;
   word-wrap: break-word;
-  background-color:#333;
+  background-color:#3b3b3b;
   color: #d6d6d6;
 }
 
@@ -1108,4 +1136,4 @@ footer .owner p a {
 .highlight .vc { color: #008080 } /* Name.Variable.Class */
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long 
+.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
