--- a/stylesheets/sage.css
+++ b/stylesheets/sage.css
@@ -473,14 +473,14 @@ a:hover {
 h1.title {
   margin: 0px 0px 0px;
   font-size: 50px;
-  color: #bbb;
+  color: #ccc;
   font-family: 'Yantramanav', sans-serif;
   text-align: center;
 }
 h1.mtitle {
   margin: 10px 20px 10px;
   font-size: 25px;
-  color: #bbb;
+  color: #ccc;
   font-family: 'Yantramanav', sans-serif;
   /*font-family:Georgia, serif;*/
   text-align: center;
@@ -505,13 +505,14 @@ h1.subtitle {
 
 
 #container {
-  background: #ddd url(../images/carbon2.png);
-  box-shadow: 0 0 33px #888;
+  /*background: #ddd url(../images/carbon2.png);*/
+  background: #202020;
+  box-shadow: 0 0 5px #444;
 }
 
 p.tagline {
   padding: 1em 1em 1em;
-  color: #bbb;
+  color: #ddd;
   font-size: 20px;
   line-height: 1.3;
   text-align: left;
@@ -531,7 +532,7 @@ h1.tagline {
 }
 
 .markdown-body a {
-  color: #542465; 
+  color: #542465; /*purple*/
   text-decoration: none;
   font-weight: bold;
   transition: opacity ease-in-out 0.3s;
@@ -550,19 +551,20 @@ img {
 
 .download-bar {
   clear: both;
-  background: #111;
-  border: 3px solid #222;
-  box-shadow: 0 0 20px #786d29;
-  box-shadow: 0 0 2px #888;
+  /*background: #111 */
+  background: #ddd url(../images/carbon2.png);
+  border: 2px solid #222;
+  /*box-shadow: 0 0 2px #786d29;*/
+  box-shadow: 0px 0px 0px #444;
   z-index:10;
   padding: 0px;
-  margin: 0 -33px 20px;
+  margin: 0 -33px 25px;
   position: relative;
 }
 
 .download-bar .blc {
-  border: 9px solid black;
-  border-color: transparent transparent black;
+  border: 9px solid #222;
+  border-color: transparent transparent #222;
   width: 0;
   height: 0;
   display: block;
@@ -577,8 +579,8 @@ img {
 }
 
 .download-bar .trc {
-  border: 9px solid black;
-  border-color:   transparent transparent black;
+  border: 9px solid #222;
+  border-color:   transparent transparent #222;
   width: 0;
   height: 0;
   display: block;
