--- a/stylesheets/sage.css
+++ b/stylesheets/sage.css
@@ -517,10 +517,24 @@ p.tagline {
   line-height: 1.3;
   text-align: left;
 }
+p.code {
+  background:#202020;
+  box-shadow: 4 4 5px #444;
+  color:#ddd;
+  font-size: 16px;
+  font-family: monospace;
+}
+
 h1.tagline {
   padding: 25px 20px 0;
   color: #fff;
   font-size: 22px;
+}
+h1.ctagline {
+  padding: 25px 20px 0;
+  color: #ccc;
+  font-size: 22px;
+  text-align: center;
 }
 
 #main {
