--- a/stylesheets/thomas2020.css
+++ b/stylesheets/thomas2020.css
@@ -456,7 +456,7 @@ a:hover {
 
 h1.title {
   margin: 0px 0px 0px;
-  font-size: 36px;
+  font-size: 30px;
   line-height: 1.2;
   color: #000;
   font-family: 'Merriweather', serif;
@@ -470,6 +470,10 @@ a.Gray {
   margin: 0px 00px 00px;
 }
 
+p {
+  text-align: justify;
+}
+
 p.tagline {
   /*padding: 1em 1em 1em;*/
   color: #fff;
@@ -478,6 +482,13 @@ p.tagline {
   line-height: 1.3;
   text-align: center;
   margin: 0px 00px 00px;
+}
+p.affiliation {
+  font-size: 22px;
+  /*font-weight: bold;*/
+  font-family: 'Merriweather', serif;
+  line-height: 1.4;
+  text-align: left;
 }
 p.code {
   background:#202020;
